<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="DUT_LogowanieBledow_Zapamietanych" Id="{2c08987e-0c06-47a0-8de1-62e730e4a65d}">
    <Declaration><![CDATA[TYPE DUT_LogowanieBledow_Zapamietanych :
STRUCT
	iIdZdarzenia							: INT;
	dtDataStart								: DT;
	dtDataKoniec							: DT;
	bAktywne								: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>